[156017] Refined plugin dependencies

--- a/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
@@ -11,14 +11,15 @@
 #  
 #*************************************************************************
 #
-# $Id$
+# $Id: build.properties,v 1.1 2006/09/28 10:30:34 lzhu Exp $
 #
 bin.includes = about.html,\
                plugin.xml,\
                META-INF/,\
                lib/,\
                .,\
-               plugin.properties
+               plugin.properties,\
+               about_files/
 download.dir =           ./download/
 source.. = src/
 output.. = bin/
