CheckIn:Fix bugzilla bug 159379 [smoke]Error occour when using xml data source to add data set

--- a/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.xml
@@ -111,7 +111,7 @@
             driverClass="org.eclipse.datatools.enablement.oda.xml.impl.Driver"
             defaultDisplayName="%datasource.name"
             id="org.eclipse.datatools.enablement.oda.xml"
-            setThreadContextClassLoader="true">
+            setThreadContextClassLoader="false">
          <properties>
          <propertyGroup
                defaultDisplayName="Connection Properties"
