--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.xml.query/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.xml.query/build.properties
@@ -3,7 +3,8 @@ output.sqlxmlqueryparser.jar = bin/
 bin.includes = plugin.xml,\
                sqlxmlqueryparser.jar,\
                META-INF/,\
-               about.html
+               about.html,\
+               plugin.properties
 src.includes = .classpath,\
                .cvsignore,\
                .project,\
