--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/src/org/eclipse/datatools/connectivity/sqm/internal/core/rte/fe/GenericDdlGeneration.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/src/org/eclipse/datatools/connectivity/sqm/internal/core/rte/fe/GenericDdlGeneration.properties
@@ -20,6 +20,14 @@ GENERATE_STOREDPROCEDURE =	Sto&red procedures
 GENERATE_STOREDPROCEDURE_DES =	Generate stored procedures
 GENERATE_FUNCTION 		=	Function&s
 GENERATE_FUNCTION_DES 	=	Generate functions
+GENERATE_SCHEMAS 		= &Schemas
+GENERATE_SCHEMAS_DES 	= Generate schemas
+GENERATE_PK_CONSTRAINTS 	= &Primary key constraint
+GENERATE_PK_CONSTRAINTS_DES 	= Generate primary key constraint
+GENERATE_FK_CONSTRAINTS 		= &Foreign key constraint
+GENERATE_FK_CONSTRAINTS_DES 	= Generate foreign key constraint
+GENERATE_CK_CONSTRAINTS 		= &Check constraint
+GENERATE_CK_CONSTRAINTS_DES 	= Generate check constraint
 GENERATION_OPTIONS = Generation options
 GENERATION_OPTIONS_DES = Options for generation
 ADDITIONAL_ELEMENTS = Additional elements
