CheckIn:Updated Flat file driver, add some new feature and fix a series of bugs.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
@@ -19,5 +19,6 @@ bin.includes = about.html,\
                .,\
                plugin.properties
 download.dir =           ./download/
-source.. = src/
+source.. = src/,\
+           test/
 output.. = bin/
