--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
@@ -15,7 +15,16 @@ datasource.name=Flat File Data Source
 dataset.name=Flat File Data Set
 
 datasource.property.home=Home &Folder
+datasource.property.csvdelimitertype=CSV &Type
 datasource.property.charset=&Character Set
 datasource.property.incltypeline=Use Second Line as &Data Type Indicator
+datasource.property.inclcolumnnameline=Use First Line as Column &Name Indicator
+
+dataset.property.savedcolumnsinfo=The Information about Each Column
+
 property.value.yes=Yes
 property.value.no=No
+property.value.comma=COMMA
+property.value.semicolon=SEMICOLON
+property.value.pipe=PIPE
+property.value.tab=TAB
