CheckIn:Fix some build script problem in flat file driver.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
@@ -19,6 +19,5 @@ bin.includes = about.html,\
                .,\
                plugin.properties
 download.dir =           ./download/
-source.. = src/,\
-           test/
+source.. = src/
 output.. = bin/
