--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
@@ -42,10 +42,10 @@
             parentCategory="org.eclipse.datatools.connectivity.db.genericDriverCategory">
          <properties>
             <property
+                  customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.DriverClassBrowsePropertyDescriptor"
                   generated="false"
                   id="org.eclipse.datatools.connectivity.db.driverClass"
                   name="%driverClass"
-                  value=""
                   required="true"
                   visible="true"/>
             <property
