--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -109,4 +109,9 @@ CPCreateProcessor.name = DTP Connectivity Create Processor
 CPRenameChange.name = Rename {0} Connection Profile
 CPRenameProcessor.name = DTP Connectivity Rename Processor
 CPRenameChange.title.error = Failed to rename connection profile.
- 
+
+PropertyDescriptor.error.title = Error processing property descriptor for driver definition
+PasswordTextPropertyDescriptor.property.label = Password
+DriverClassBrowsePropertyDescriptor.property.label = Driver Class
+DriverClassBrowsePropertyDescriptor.jardialog.title = Available Classes from Jar List
+DriverClassBrowsePropertyDescriptor.jardialog.msg = Select one of the available classes.
