--- a/plugins/org.eclipse.datatools.sqltools.editor.core/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/build.xml
@@ -19,7 +19,7 @@
 	<property name="baseos" value="${os}"/>
 	<property name="basearch" value="${arch}"/>
 	<property name="basenl" value="${nl}"/>
-	<property name="eclipse.home" location="."/>
+	<!--property name="eclipse.home" location="."/-->
 	<property file="build.properties"/>
 	<!-- JavaDoc settings -->
 	<property name="javadocWindowTitle" value="DTP SQL Editor Framework"/>
@@ -29,7 +29,7 @@
 	<!-- Compiler settings. -->
 	<property name="javacFailOnError" value="true"/>
 	<property name="javacDebugInfo" value="on"/>
-	<property name="javacVerbose" value="true"/>
+	<property name="javacVerbose" value="false"/>
 	<property name="javacSource" value="${javac.source}"/>
 	<property name="javacTarget" value="${javac.target}"/>
 	<property name="compilerArg" value=""/>
@@ -38,69 +38,26 @@
 			<include name="*.jar"/>
 		</fileset>
 		<fileset dir="${eclipse.home}/plugins">
-			<!-- Include jared plug-ins -->
-			<include name="org.eclipse.core.runtime_*.jar"/>
-			<include name="org.eclipse.osgi_*.jar"/>
-			<include name="org.eclipse.core.resources_*.jar"/>
-			<include name="org.eclipse.ui_*.jar"/>
-			<include name="org.eclipse.swt_*.jar"/>
-			<include name="org.eclipse.swt.*_*.jar"/>
-			<include name="org.eclipse.jface_*.jar"/>
-			<include name="org.eclipse.jface.text_*.jar"/>
-			<include name="org.eclipse.text_*.jar"/>
-			<include name="org.eclipse.core.commands_*.jar"/>
-			<include name="org.eclipse.ui.workbench_*.jar"/>
-			<include name="org.eclipse.ui.editors_*.jar"/>
-			<include name="org.eclipse.core.filebuffers_*.jar"/>
-			<include name="org.eclipse.debug.core_*.jar"/>
-			<include name="org.eclipse.emf.ecore_*.jar"/>
-			<include name="org.eclipse.emf.common_*.jar"/>
-			<include name="org.eclipse.emf.ecore.sdo_*.jar"/>
-			<include name="org.eclipse.emf.commonj.sdo_*.jar"/>
-			<include name="org.eclipse.emf.ecore.xmi_*.jar"/>
-			<include name="org.eclipse.emf.ecore.change_*.jar"/>
-			<include name="com.ibm.icu_*.jar"/>
-			<!-- Include expanded plug-ins -->
-			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
-			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
-			<include name="org.eclipse.core.resources_*/org.eclipse.core.resources_*.jar"/>
-			<include name="org.eclipse.ui_*/org.eclipse.ui_*.jar"/>
-			<include name="org.eclipse.swt_*/org.eclipse.swt_*.jar"/>
-			<include name="org.eclipse.swt.*_*/org.eclipse.swt.*_*.jar"/>
-			<include name="org.eclipse.jface_*/org.eclipse.jface_*.jar"/>
-			<include name="org.eclipse.jface.text_*/org.eclipse.jface.text_*.jar"/>
-			<include name="org.eclipse.text_*/org.eclipse.text_*.jar"/>
-			<include name="org.eclipse.core.commands_*/org.eclipse.core.commands_*.jar"/>
-			<include name="org.eclipse.ui.workbench_*/org.eclipse.ui.workbench_*.jar"/>
-			<include name="org.eclipse.ui.editors_*/org.eclipse.ui.editors_*.jar"/>
-			<include name="org.eclipse.core.filebuffers_*/org.eclipse.core.filebuffers_*.jar"/>
-			<include name="org.eclipse.debug.core_*/org.eclipse.debug.core_*.jar"/>
-			<include name="org.eclipse.emf.ecore_*/org.eclipse.emf.ecore_*.jar"/>
-			<include name="org.eclipse.emf.common_*/org.eclipse.emf.common_*.jar"/>
-			<include name="org.eclipse.emf.ecore.sdo_*/org.eclipse.emf.ecore.sdo*.jar"/>
-			<include name="org.eclipse.emf.commonj.sdo_*/org.eclipse.emf.commonj.sdo*.jar"/>
-			<include name="org.eclipse.emf.ecore.xmi_*/org.eclipse.emf.ecore.xmi*.jar"/>
-			<include name="org.eclipse.emf.ecore.change_*/org.eclipse.emf.ecore.change*.jar"/>
-		</fileset>
-		<!-- Dependencies on other DTP plug-ins, built before this one -->
-		<fileset dir="../">
-			<include name="org.eclipse.datatools.modelbase.sql/sqlmodel.jar"/>
-			<include name="org.eclipse.datatools.modelbase.dbdefinition/databasedefinition.jar"/>
-			<include name="org.eclipse.datatools.modelbase.sql.query/sqlquerymodel.jar"/>
-			<include name="org.eclipse.datatools.connectivity/connectivity.jar"/>
-			<include name="org.eclipse.datatools.connectivity.sqm.core/rdbcore.jar"/>
-			<include name="org.eclipse.datatools.connectivity.db.generic/genericdb.jar"/>
-			<include name="org.eclipse.datatools.sqltools.sql/sqltools.jar"/>
-		</fileset>
-		<dirset dir="../">
-			<include name="org.eclipse.datatools.modelbase.dbdefinition/bin"/>
-			<include name="org.eclipse.datatools.modelbase.sql/bin"/>
-			<include name="org.eclipse.datatools.modelbase.sql.query/bin"/>
-			<include name="org.eclipse.datatools.connectivity/bin"/>
-			<include name="org.eclipse.datatools.connectivity.db.generic/bin"/>
-			<include name="org.eclipse.datatools.connectivity.sqm.core/bin"/>
-			<include name="org.eclipse.datatools.sqltools.sql/bin"/>
-		</dirset>
+            <include name="com.ibm.icu*.jar"/>
+            <include name="org.eclipse.core.*.jar"/>
+            <include name="org.eclipse.equinox.*.jar"/>
+            <include name="org.eclipse.ui*.jar"/>
+            <include name="org.eclipse.swt*.jar"/>
+            <include name="org.eclipse.jface*.jar"/>
+            <include name="org.eclipse.text*.jar"/>
+            <include name="org.junit_*.jar"/>
+            <include name="org.eclipse.osgi*.jar"/>
+            <include name="org.eclipse.update.ui.forms_*.jar"/>
+            <include name="org.eclipse.search_*.jar"/>
+            <include name="org.eclipse.debug.*.jar"/>
+			<include name="org.eclipse.emf.common*.jar"/>
+			<include name="org.eclipse.emf.ecore*.jar"/>
+        </fileset>
+		<!--The generated dtp plugins-->
+		<fileset dir="${plugin.destination}">
+	            <include name="org.eclipse.datatools*/*.jar"/>
+				<include name="*.jar"/>
+        </fileset>
 	</path>
 	<property name="bootclasspath" refid="path_bootclasspath"/>
 
@@ -131,6 +88,8 @@
 		</antcall>
 		<zip destfile="${plugin.destination}/${module.name}_${plugin.version}.jar" basedir="${temp.folder}/${module.name}_${plugin.version}" filesonly="false" whenempty="skip" update="false"/>
 		<delete dir="${temp.folder}"/>
+		<delete dir="${build.result.folder}/@dot"/>
+
 	</target>
 
 	<target name="sqleditorframe.jar" depends="init" unless="sqleditorframe.jar" description="Create jar: org.eclipse.datatools.sqltools.editor.core sqleditorframe.jar.">
@@ -147,13 +106,15 @@
 			<fileset dir="src/" excludes="**/*.java, **/package.htm*,null"			/>
 		</copy>
 		<mkdir dir="${build.result.folder}"/>
-		<jar destfile="${build.result.folder}/sqleditorframe.jar" basedir="${temp.folder}/sqleditorframe.jar.bin"/>
+		<copy todir="${build.result.folder}/@dot" failonerror="true" overwrite="false">
+			<fileset dir="${temp.folder}/sqleditorframe.jar.bin"			/>
+		</copy>
 		<delete dir="${temp.folder}/sqleditorframe.jar.bin"/>
 	</target>
 
-	<target name="sqleditorframesrc.zip" depends="init" unless="sqleditorframesrc.zip">
+	<target name="src.zip" depends="init" unless="src.zip">
 		<mkdir dir="${build.result.folder}"/>
-		<zip destfile="${build.result.folder}/sqleditorframesrc.zip" filesonly="false" whenempty="skip" update="false">
+		<zip destfile="${build.result.folder}/src.zip" filesonly="false" whenempty="skip" update="false">
 			<fileset dir="src/" includes="**/*.java"			/>
 		</zip>
 	</target>
@@ -164,29 +125,29 @@
 	</target>
 
 	<target name="build.sources" depends="init">
-		<available property="sqleditorframesrc.zip" file="${build.result.folder}/sqleditorframesrc.zip"/>
-		<antcall target="sqleditorframesrc.zip"/>
+		<available property="src.zip" file="${build.result.folder}/src.zip"/>
+		<antcall target="src.zip"/>
 	</target>
 
 	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
 		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${build.result.folder}" includes="sqleditorframe.jar"			/>
+			<fileset dir="${build.result.folder}/@dot" includes="**"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${basedir}" includes="META-INF/,sqleditorframe.jar,plugin.xml,.settings/,schema/,about.html"			/>
+			<fileset dir="${basedir}" includes="META-INF/,plugin.xml,.settings/,schema/,about.html"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false">
-			<fileset dir="${basedir}" includes="sqleditorframesrc.zip"/>
+			<fileset dir="${basedir}" includes="src.zip"/>
 		</copy>
 	</target>
 
 	<target name="build.zips" depends="init">
 	</target>
 
-	<target name="gather.sources" depends="init" if="destination.temp.folder">
+	<target name="gather.sources" depends="init,build.sources" if="destination.temp.folder">
 		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
-		<copy file="${build.result.folder}/sqleditorframesrc.zip" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
+		<copy file="${build.result.folder}/src.zip" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
 	</target>
 
 	<target name="gather.logs" depends="init" if="destination.temp.folder">
@@ -195,8 +156,8 @@
 	</target>
 
 	<target name="clean" depends="init" description="Clean the plug-in: org.eclipse.datatools.sqltools.editor.core of all the zips, jars and logs created.">
-		<delete file="${build.result.folder}/sqleditorframe.jar"/>
-		<delete file="${build.result.folder}/sqleditorframesrc.zip"/>
+		<delete dir="${build.result.folder}/@dot"/>
+		<delete file="${build.result.folder}/src.zip"/>
 		<delete file="${plugin.destination}/${module.name}_${plugin.version}.jar"/>
 		<delete file="${plugin.destination}/${module.name}_${plugin.version}.zip"/>
 		<delete dir="${temp.folder}"/>
