--- a/plugins/org.eclipse.datatools.sqltools.common.ui/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/build.xml
@@ -19,7 +19,6 @@
 	<property name="baseos" value="${os}"/>
 	<property name="basearch" value="${arch}"/>
 	<property name="basenl" value="${nl}"/>
-	<property name="eclipse.home" location="."/>
 	<property file="build.properties"/>
 	<!-- JavaDoc settings -->
 	<property name="javadocWindowTitle" value="DTP SQL Development Tools Common UI"/>
@@ -29,7 +28,7 @@
 	<!-- Compiler settings. -->
 	<property name="javacFailOnError" value="true"/>
 	<property name="javacDebugInfo" value="on"/>
-	<property name="javacVerbose" value="true"/>
+	<property name="javacVerbose" value="false"/>
 	<property name="javacSource" value="${javac.source}"/>
 	<property name="javacTarget" value="${javac.target}"/>
 	<property name="compilerArg" value=""/>
@@ -38,32 +37,27 @@
 			<include name="*.jar"/>
 		</fileset>
 		<fileset dir="${eclipse.home}/plugins">
-			<!-- Include jared plug-ins -->
-			<include name="org.eclipse.core.runtime_*.jar"/>
-			<include name="org.eclipse.osgi_*.jar"/>
-			<include name="org.eclipse.ui_*.jar"/>
-			<include name="org.eclipse.swt_*.jar"/>
-			<include name="org.eclipse.swt.*_*.jar"/>
-			<include name="org.eclipse.jface_*.jar"/>
-			<include name="org.eclipse.core.commands_*.jar"/>
-			<include name="org.eclipse.ui.workbench_*.jar"/>
-			<include name="org.eclipse.jface.text_*.jar"/>
-			<include name="org.eclipse.text_*.jar"/>
-			<include name="org.eclipse.debug.core_*.jar"/>
-			<include name="com.ibm.icu_*.jar"/>
-			<!-- Include expanded plug-ins -->
-			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
-			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
-			<include name="org.eclipse.ui_*/org.eclipse.ui_*.jar"/>
-			<include name="org.eclipse.swt_*/org.eclipse.swt_*.jar"/>
-			<include name="org.eclipse.swt.*_*/org.eclipse.swt.*_*.jar"/>
-			<include name="org.eclipse.jface_*/org.eclipse.jface_*.jar"/>
-			<include name="org.eclipse.core.commands_*/org.eclipse.core.commands_*.jar"/>
-			<include name="org.eclipse.ui.workbench_*/org.eclipse.ui.workbench_*.jar"/>
-			<include name="org.eclipse.jface.text_*/org.eclipse.jface.text_*.jar"/>
-			<include name="org.eclipse.text_*/org.eclipse.text_*.jar"/>
-			<include name="org.eclipse.debug.core_*/org.eclipse.debug.core_*.jar"/>
-		</fileset>
+            <include name="com.ibm.icu*.jar"/>
+            <include name="org.eclipse.core.*.jar"/>
+            <include name="org.eclipse.equinox.*.jar"/>
+            <include name="org.eclipse.ui*.jar"/>
+            <include name="org.eclipse.swt*.jar"/>
+            <include name="org.eclipse.jface*.jar"/>
+            <include name="org.eclipse.text*.jar"/>
+            <include name="org.junit_*.jar"/>
+            <include name="org.eclipse.osgi*.jar"/>
+            <include name="org.eclipse.update.ui.forms_*.jar"/>
+            <include name="org.eclipse.search_*.jar"/>
+            <include name="org.eclipse.debug.*.jar"/>
+			<include name="org.eclipse.emf.common*.jar"/>
+			<include name="org.eclipse.emf.ecore*.jar"/>
+        </fileset>
+		<!--The generated dtp plugins-->
+		<fileset dir="${plugin.destination}">
+	            <include name="org.eclipse.datatools*/*.jar"/>
+				<include name="*.jar"/>
+        </fileset>
+
 	</path>
 	<property name="bootclasspath" refid="path_bootclasspath"/>
 
@@ -94,6 +88,7 @@
 		</antcall>
 		<zip destfile="${plugin.destination}/${module.name}_${plugin.version}.jar" basedir="${temp.folder}/${module.name}_${plugin.version}" filesonly="false" whenempty="skip" update="false"/>
 		<delete dir="${temp.folder}"/>
+		<delete dir="${build.result.folder}/@dot"/>
 	</target>
 
 	<target name="sqltoolscommonui.jar" depends="init" unless="sqltoolscommonui.jar" description="Create jar: org.eclipse.datatools.sqltools.common.ui sqltoolscommonui.jar.">
@@ -110,13 +105,15 @@
 			<fileset dir="src/" excludes="**/*.java, **/package.htm*,null"			/>
 		</copy>
 		<mkdir dir="${build.result.folder}"/>
-		<jar destfile="${build.result.folder}/sqltoolscommonui.jar" basedir="${temp.folder}/sqltoolscommonui.jar.bin"/>
+		<copy todir="${build.result.folder}/@dot" failonerror="true" overwrite="false">
+			<fileset dir="${temp.folder}/sqltoolscommonui.jar.bin"			/>
+		</copy>
 		<delete dir="${temp.folder}/sqltoolscommonui.jar.bin"/>
 	</target>
 
-	<target name="sqltoolscommonuisrc.zip" depends="init" unless="sqltoolscommonuisrc.zip">
+	<target name="src.zip" depends="init" unless="src.zip">
 		<mkdir dir="${build.result.folder}"/>
-		<zip destfile="${build.result.folder}/sqltoolscommonuisrc.zip" filesonly="false" whenempty="skip" update="false">
+		<zip destfile="${build.result.folder}/src.zip" filesonly="false" whenempty="skip" update="false">
 			<fileset dir="src/" includes="**/*.java"			/>
 		</zip>
 	</target>
@@ -127,29 +124,26 @@
 	</target>
 
 	<target name="build.sources" depends="init">
-		<available property="sqltoolscommonuisrc.zip" file="${build.result.folder}/sqltoolscommonuisrc.zip"/>
-		<antcall target="sqltoolscommonuisrc.zip"/>
+		<available property="src.zip" file="${build.result.folder}/src.zip"/>
+		<antcall target="src.zip"/>
 	</target>
 
 	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
 		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${build.result.folder}" includes="sqltoolscommonui.jar"			/>
+			<fileset dir="${build.result.folder}/@dot" includes="**"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${basedir}" includes="META-INF/,sqltoolscommonui.jar,icons/,schema/,plugin.xml,about.html"			/>
-		</copy>
-		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false">
-			<fileset dir="${basedir}" includes="sqltoolscommonuisrc.zip"/>
+			<fileset dir="${basedir}" includes="META-INF/,icons/,schema/,plugin.xml,about.html"			/>
 		</copy>
 	</target>
 
 	<target name="build.zips" depends="init">
 	</target>
 
-	<target name="gather.sources" depends="init" if="destination.temp.folder">
+	<target name="gather.sources" depends="init,build.sources" if="destination.temp.folder">
 		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
-		<copy file="${build.result.folder}/sqltoolscommonuisrc.zip" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
+		<copy file="${build.result.folder}/src.zip" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
 	</target>
 
 	<target name="gather.logs" depends="init" if="destination.temp.folder">
@@ -158,8 +152,8 @@
 	</target>
 
 	<target name="clean" depends="init" description="Clean the plug-in: org.eclipse.datatools.sqltools.common.ui of all the zips, jars and logs created.">
-		<delete file="${build.result.folder}/sqltoolscommonui.jar"/>
-		<delete file="${build.result.folder}/sqltoolscommonuisrc.zip"/>
+		<delete dir="${build.result.folder}/@dot"/>
+		<delete file="${build.result.folder}/src.zip"/>
 		<delete file="${plugin.destination}/${module.name}_${plugin.version}.jar"/>
 		<delete file="${plugin.destination}/${module.name}_${plugin.version}.zip"/>
 		<delete dir="${temp.folder}"/>
