--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/build.xml
@@ -31,7 +31,7 @@
 	<!-- Compiler settings. -->
 	<property name="javacFailOnError" value="true"/>
 	<property name="javacDebugInfo" value="on"/>
-	<property name="javacVerbose" value="true"/>
+	<property name="javacVerbose" value="false"/>
 	<property name="javacSource" value="${javac.source}"/>
 	<property name="javacTarget" value="${javac.target}"/>
 	<property name="compilerArg" value=""/>
@@ -40,81 +40,26 @@
 			<include name="*.jar"/>
 		</fileset>
 		<fileset dir="${eclipse.home}/plugins">
-			<!-- Include jared plug-ins -->
-			<include name="org.eclipse.core.runtime_*.jar"/>
-			<include name="org.eclipse.osgi_*.jar"/>
-			<include name="org.eclipse.ui_*.jar"/>
-			<include name="org.eclipse.swt_*.jar"/>
-			<include name="org.eclipse.swt.*_*.jar"/>
-			<include name="org.eclipse.jface_*.jar"/>
-			<include name="org.eclipse.core.commands_*.jar"/>
-			<include name="org.eclipse.ui.workbench_*.jar"/>
-			<include name="org.eclipse.jface.text_*.jar"/>
-			<include name="org.eclipse.text_*.jar"/>
-			<include name="org.eclipse.ui.workbench.texteditor_*.jar"/>
-			<include name="org.eclipse.core.resources_*.jar"/>
-			<include name="org.eclipse.ui.ide_*.jar"/>
-			<include name="org.eclipse.ui.editors_*.jar"/>
-			<include name="org.eclipse.core.filebuffers_*.jar"/>
-			<include name="org.eclipse.ui.views_*.jar"/>
-			<include name="org.eclipse.debug.core_*.jar"/>
-			<include name="org.eclipse.debug.ui_*.jar"/>
-			<include name="com.ibm.icu_*.jar"/>
-			<!-- Include jared EMF plug-ins -->
-			<include name="org.eclipse.emf.ecore_*.jar"/>
-			<include name="org.eclipse.emf.common_*.jar"/>
-			<include name="org.eclipse.emf.ecore.sdo_*.jar"/>
-			<include name="org.eclipse.emf.commonj.sdo_*.jar"/>
-			<include name="org.eclipse.emf.ecore.xmi_*.jar"/>
-			<include name="org.eclipse.emf.ecore.change_*.jar"/>
-			<!-- Include expanded plug-ins -->
-			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
-			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
-			<include name="org.eclipse.ui_*/org.eclipse.ui_*.jar"/>
-			<include name="org.eclipse.swt_*/org.eclipse.swt_*.jar"/>
-			<include name="org.eclipse.swt.*_*/org.eclipse.swt.*_*.jar"/>
-			<include name="org.eclipse.core.commands_*/org.eclipse.core.commands_*.jar"/>
-			<include name="org.eclipse.ui.workbench_*/org.eclipse.ui.workbench_*.jar"/>
-			<include name="org.eclipse.jface_*/org.eclipse.jface_*.jar"/>
-			<include name="org.eclipse.jface.text_*/org.eclipse.jface.text_*.jar"/>
-			<include name="org.eclipse.text_*/org.eclipse.text_*.jar"/>
-			<include name="org.eclipse.ui.workbench.texteditor_*/org.eclipse.ui.workbench.texteditor_*.jar"/>
-			<include name="org.eclipse.core.resources_*/org.eclipse.core.resources_*.jar"/>
-			<include name="org.eclipse.ui.ide_*/org.eclipse.ui.ide_*.jar"/>
-			<include name="org.eclipse.ui.editors_*/org.eclipse.ui.editors_*.jar"/>
-			<include name="org.eclipse.core.filebuffers_*/org.eclipse.core.filebuffers_*.jar"/>
-			<include name="org.eclipse.ui.views_*/org.eclipse.ui.views_*.jar"/>
-			<include name="org.eclipse.debug.core_*/org.eclipse.debug.core_*.jar"/>
-			<include name="org.eclipse.debug.core.ui_*/org.eclipse.debug.ui_*.jar"/>
-			<!-- Include expanded EMF plug-ins -->
-			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
-			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
-			<include name="org.eclipse.emf.ecore_*/org.eclipse.emf.ecore*.jar"/>
-			<include name="org.eclipse.emf.common_*/org.eclipse.emf.common*.jar"/>
-			<include name="org.eclipse.emf.ecore.sdo_*/org.eclipse.emf.ecore.sdo*.jar"/>
-			<include name="org.eclipse.emf.commonj.sdo_*/org.eclipse.emf.commonj.sdo*.jar"/>
-			<include name="org.eclipse.emf.ecore.xmi_*/org.eclipse.emf.ecore.xmi*.jar"/>
-			<include name="org.eclipse.emf.ecore.change_*/org.eclipse.emf.ecore.change*.jar"/>
-		</fileset>
-		<!-- Dependencies on other DTP plug-ins, built before this one -->
-		<fileset dir="../">
-			<include name="org.eclipse.datatools.connectivity/connectivity.jar"/>
-			<include name="org.eclipse.datatools.connectivity.sqm.core/rdbcore.jar"/>
-			<include name="org.eclipse.datatools.modelbase.dbdefinition/databasedefinition.jar"/>
-			<include name="org.eclipse.datatools.modelbase.sql/sqlmodel.jar"/>
-			<include name="org.eclipse.datatools.sqltools.sql/sqltools.jar"/>
-			<include name="org.eclipse.datatools.sqltools.editor.core/sqleditorframe.jar"/>
-			<include name="org.eclipse.datatools.sqltools.result/sqlresult.jar"/>
-		</fileset>
-		<dirset dir="../">
-			<include name="org.eclipse.datatools.connectivity/bin"/>
-			<include name="org.eclipse.datatools.connectivity.sqm.core/bin"/>
-			<include name="org.eclipse.datatools.modelbase.dbdefinition/bin"/>
-			<include name="org.eclipse.datatools.modelbase.sql/bin"/>
-			<include name="org.eclipse.datatools.sqltools.sql/bin"/>
-			<include name="org.eclipse.datatools.sqltools.editor.core/bin"/>
-			<include name="org.eclipse.datatools.sqltools.result/bin"/>
-		</dirset>
+            <include name="com.ibm.icu*.jar"/>
+            <include name="org.eclipse.core.*.jar"/>
+            <include name="org.eclipse.equinox.*.jar"/>
+            <include name="org.eclipse.ui*.jar"/>
+            <include name="org.eclipse.swt*.jar"/>
+            <include name="org.eclipse.jface*.jar"/>
+            <include name="org.eclipse.text*.jar"/>
+            <include name="org.junit_*.jar"/>
+            <include name="org.eclipse.osgi*.jar"/>
+            <include name="org.eclipse.update.ui.forms_*.jar"/>
+            <include name="org.eclipse.search_*.jar"/>
+            <include name="org.eclipse.debug.*.jar"/>
+			<include name="org.eclipse.emf.common*.jar"/>
+			<include name="org.eclipse.emf.ecore*.jar"/>
+        </fileset>
+		<!--The generated dtp plugins-->
+		<fileset dir="${plugin.destination}">
+	            <include name="org.eclipse.datatools*/*.jar"/>
+				<include name="*.jar"/>
+        </fileset>
 	</path>
 	<property name="bootclasspath" refid="path_bootclasspath"/>
 
@@ -145,6 +90,7 @@
 		</antcall>
 		<zip destfile="${plugin.destination}/${module.name}_${plugin.version}.jar" basedir="${temp.folder}/${module.name}_${plugin.version}" filesonly="false" whenempty="skip" update="false"/>
 		<delete dir="${temp.folder}"/>
+		<delete dir="${build.result.folder}/@dot"/>
 	</target>
 
 	<target name="sqleditor.jar" depends="init" unless="sqleditor.jar" description="Create jar: org.eclipse.datatools.sqltools.sqleditor sqleditor.jar.">
@@ -161,13 +107,15 @@
 			<fileset dir="src/" excludes="**/*.java, **/package.htm*,null"			/>
 		</copy>
 		<mkdir dir="${build.result.folder}"/>
-		<jar destfile="${build.result.folder}/sqleditor.jar" basedir="${temp.folder}/sqleditor.jar.bin"/>
+		<copy todir="${build.result.folder}/@dot" failonerror="true" overwrite="false">
+			<fileset dir="${temp.folder}/sqleditor.jar.bin"			/>
+		</copy>
 		<delete dir="${temp.folder}/sqleditor.jar.bin"/>
 	</target>
 
-	<target name="sqleditorsrc.zip" depends="init" unless="sqleditorsrc.zip">
+	<target name="src.zip" depends="init" unless="src.zip">
 		<mkdir dir="${build.result.folder}"/>
-		<zip destfile="${build.result.folder}/sqleditorsrc.zip" filesonly="false" whenempty="skip" update="false">
+		<zip destfile="${build.result.folder}/src.zip" filesonly="false" whenempty="skip" update="false">
 			<fileset dir="src/" includes="**/*.java"			/>
 		</zip>
 	</target>
@@ -178,29 +126,26 @@
 	</target>
 
 	<target name="build.sources" depends="init">
-		<available property="sqleditorsrc.zip" file="${build.result.folder}/sqleditorsrc.zip"/>
-		<antcall target="sqleditorsrc.zip"/>
+		<available property="src.zip" file="${build.result.folder}/src.zip"/>
+		<antcall target="src.zip"/>
 	</target>
 
 	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
 		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${build.result.folder}" includes="sqleditor.jar"			/>
+			<fileset dir="${build.result.folder}/@dot" includes="**"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${basedir}" includes="META-INF/,sqleditor.jar,schema/,icons/,plugin.xml,plugin.properties,about.html"			/>
-		</copy>
-			<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false">
-			<fileset dir="${basedir}" includes="sqleditorsrc.zip"/>
+			<fileset dir="${basedir}" includes="META-INF/,schema/,icons/,plugin.xml,plugin.properties,about.html"			/>
 		</copy>
 	</target>
 
 	<target name="build.zips" depends="init">
 	</target>
 
-	<target name="gather.sources" depends="init" if="destination.temp.folder">
+	<target name="gather.sources" depends="init,build.sources" if="destination.temp.folder">
 		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
-		<copy file="${build.result.folder}/sqleditorsrc.zip" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
+		<copy file="${build.result.folder}/src.zip" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
 	</target>
 
 	<target name="gather.logs" depends="init" if="destination.temp.folder">
@@ -209,8 +154,8 @@
 	</target>
 
 	<target name="clean" depends="init" description="Clean the plug-in: org.eclipse.datatools.sqltools.sqleditor of all the zips, jars and logs created.">
-		<delete file="${build.result.folder}/sqleditor.jar"/>
-		<delete file="${build.result.folder}/sqleditorsrc.zip"/>
+		<delete dir="${build.result.folder}/@dot"/>
+		<delete file="${build.result.folder}/src.zip"/>
 		<delete file="${plugin.destination}/${module.name}_${plugin.version}.jar"/>
 		<delete file="${plugin.destination}/${module.name}_${plugin.version}.zip"/>
 		<delete dir="${temp.folder}"/>
